# [package]
# name = "pi_bevy_plugin"
# version = "0.1.0"
# authors = ["moyy <myy412001799@gmail.com>"]
# edition = "2021"
# description = "Renderer for PI Engine"
# repository = "https://github.com/GaiaWorld/pi_bevy"
# license = "MIT OR Apache-2.0"
# keywords = ["pi", "bevy"]

[workspace]
members = ["crates/*"]
resolver = "2"


[patch.crates-io]
# bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
# bevy_app = { path = "../bevy/crates/bevy_app" }
# bevy_window = { path = "../bevy/crates/bevy_window" }
# bevy_utils = { path = "../bevy/crates/bevy_utils" }
# bevy_a11y = { path = "../bevy/crates/bevy_a11y" }
# bevy_input = { path = "../bevy/crates/bevy_input" }

[patch.yn]
pi_render = { path = "../pi_render" }
pi_postprocess = { path = "../pi_post_process"}
pi_hal = { path = "../pi_hal" }
# pi_async_graph = { path = "../pi_async_graph" }
# pi_graph = { path = "../pi_graph" }
# pi_map = { path = "../pi_map" }
