[package]
name = "pi_bevy_asset"
version = "0.1.4"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy"]

[features]
account_info = [] # 每20秒打印一次资产管理器的统计信息

[dependencies]
# bevy_app = "0.9"
# bevy_ecs = "0.9"
# bevy_derive = "0.9"
derive_deref = "1.1"
pi_assets = "0.13"
bevy_ecs = "0.11"
bevy_app = {version = "0.11", default_features = false}
pi_share = "0.4"
pi_hash = "0.1"
pi_null = "0.1"
serde = { version = "1.0", features = ["derive"], option=true }

crossbeam="0.8"
pi_time = "0.3"
log = "0.4"

pi_atom = { version="0.5", features = ["serde"] }
pi_render = { version = "0.1", registry = "yn" }