[package]
name = "pi_world_extend_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pi_world = { path = "../../../pi_world"}
pi_world_extend_utils = { path = "../utils", version = "0.1"}
log = "0.4"