[package]
name = "pi_bevy_ecs_extend"
# version = "0.1.0"
version = "0.1.10"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy", "ecs"]

[dependencies]
log="0.4"
pi_null="0.1"
derive_deref = "1.1"
pi_hash = "0.1"
pi_map = "0.2"
pi_print_any = "0.1"
# pi_ecs_macros="0.1"
pi_dirty = "0.1"
pi_share = "0.4"
pi_time = "0.3"
# pi_ecs="0.1"
pi_slotmap_tree = "0.3"
# bevy_ecs="0.9"
bevy_ecs = "0.11"
bevy_app = {version = "0.11", default_features = false}
bevy_utils = "0.11"
pi_slotmap = "0.1"
fixedbitset = "0.4"
pi_graph = "0.1"
pi_async_graph = "0.6"
pi-async-rt = "0.1"
thiserror = "1.0"
pi_futures = "0.1"
flume = "0.10"
pi_bevy_ecs_macro = {path = "./macro", version="0.1", registry = "yn"}
pi_assets = "0.13"
serde = { version = "1.0", features = ["derive"], option=true }


[dev-dependencies]
pi_async_graph = "0.6"
pi-async-rt = "0.1"

[features]
default = ["debug"]
debug = []