[package]
name = "pi_bevy_log"
version = "0.1.9"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Provides logging for Bevy Engine"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "log"]

[features]
# default = ["tracing-chrome"]
trace = [ "tracing-error" ]
log-file = []

[dependencies]
# bevy_ecs = {version = "0.11", default-features = false}
# bevy_app = {version = "0.11", default-features = false}
pi_world = "0.1"
tracing-subscriber = {version = "0.3.1", features = ["registry", "env-filter"]}
tracing-tracy = { version = "0.10.0", optional = true }
tracing-log = "0.1.2"
tracing-error = { version = "0.2.0", optional = true }
tracing-chrome = { version = "0.7", optional = true }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"

