[package]
name = "pi_world_extend_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pi_bevy_ecs_macro = { path = "../ecs_extend/macro", version = "0.1"}
pi_world = { path = "../../../pi_world"}
downcast-rs = "1.2"
log = "0.4"
pi-async-rt = "0.2"