[package]
name = "pi_bevy_post_process"
version = "0.1.0"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy_plugin"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy"]

[dependencies]
# bevy_app = "0.9"
# bevy_ecs = "0.9"
# bevy_derive = "0.9"
bevy={version="0.9", default-features = false}
pi_postprocess={git="https://github.com/GaiaWorld/pi_post_process.git"}
