[package]
name = "pi_bevy_post_process"
version = "0.1.0"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy_plugin"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy"]

[dependencies]
# bevy_app = "0.9"
# bevy_ecs = "0.9"
# bevy_derive = "0.9"
bevy={version="0.9", default-features = false}
pi_postprocess={git="https://github.com/GaiaWorld/pi_post_process.git", branch="bevy"}
pi_render={git="https://github.com/GaiaWorld/pi_render.git", branch="bevy_shader"}

pi_assets = "0.10"
pi_share = "0.4"
pi_hash = "0.1"

pi_bevy_render_plugin = { path = "../render" }
pi_bevy_asset = { path = "../asset" }
