[package]
name = "pi_bevy_post_process"
version = "0.1.2"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy"]

[dependencies]
# bevy_app = "0.9"
# bevy_ecs = "0.9"
# bevy_derive = "0.9"
pi_world_extend_plugin = { path = "../plugin", version = "0.1"}
pi_world = { path = "../../../pi_world"}
# bevy_ecs = "0.11"
# bevy_app = {version = "0.11", default-features = false}
pi_postprocess = { version = "0.1", registry = "yn"}
pi_render = { version = "0.1", registry = "yn"}

pi_assets = "0.13"
pi_share = "0.4"
pi_hash = "0.1"

pi_bevy_render_plugin = { path = "../render", version = "0.1", registry = "yn" }
pi_bevy_asset = { path = "../asset", version = "0.1", registry = "yn" }
