[package]
name = "pi_bevy_render_plugin"
version = "0.1.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy_plugin"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy", "plugin"]

[dependencies]
# bevy_app = "0.9"
# bevy_ecs = "0.9"
# bevy_derive = "0.9"
# bevy_window = "0.9"
bevy = {version="0.10", default-features = false}
raw-window-handle = "0.5"

log = "0.4"
thiserror = "1.0"
wgpu = { version = "0.15", default-features = false, features = ["glsl"] }
crossbeam="0.8"
futures="0.3"

pi_hash = "0.1"
pi_futures = "0.1"
pi_async = "0.5"
pi_share = "0.4"
pi_render = { git = "https://github.com/GaiaWorld/pi_render.git", branch = "bevy_shader" }
render_derive = { git = "https://github.com/GaiaWorld/pi_render.git", branch = "bevy_shader" }
pi_bevy_asset = { path = "../asset", version = "0.1" }
pi_assets = "0.11"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[features]
trace = []

[dev-dependencies]
bevy = {version="0.10", default-features = false, features=["bevy_winit"]}
