[package]
name = "pi_world_extend_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pi_world = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"], option = true }
pi_key_alloter = "0.5"