[package]
name = "pi_bevy_window"
version = "0.1.4"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy", "window"]

[dependencies]
# bevy_ecs = "0.11"
# bevy_math = "0.11"
# bevy_app = {version = "0.11", default-features = false}

raw-window-handle = "0.6"
log = "0.4"
wgpu = {version = "0.1", registry = "yn", package="pi_wgpu"}
pi_world_extend_plugin = { path = "../plugin", version = "0.1"}
pi_world = { path = "../../../pi_world"}

[dependencies.nalgebra]
version = "0.32"
features = ["libm"]
default-features = false
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# web-sys = {version="0.3", features = [
# 	"HtmlCanvasElement"
# ]}