[package]
name = "pi_window_renderer"
version = "0.1.0"
authors = ["bp0002 <bp950722@outlook.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["pi", "window_renderer"]

[dependencies]
# bevy_app = "0.9"
# bevy_ecs = "0.9"
# bevy_derive = "0.9"
# bevy_window = "0.9"
bevy = {version="0.11", default-features = false}
raw-window-handle = "0.5"

log = "0.4"
thiserror = "1.0"
wgpu = { version = "0.16", default-features = false, features = ["glsl"] }
crossbeam="0.8"
futures="0.3"
naga = { version = "0.12"}
bytemuck = { version = "1.4", features = ["derive"] }

pi_hash = "0.1"
pi_futures = "0.1"
pi-async-rt = "0.1"
pi_share = "0.4"
render_derive = { version = "0.1", registry = "yn" }
pi_bevy_asset = { path = "../asset", version = "0.1", registry = "yn" }
pi_bevy_render_plugin = { path = "../render", version = "0.1", registry = "yn" }
pi_assets = "0.13"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[features]
trace = []

[dev-dependencies]
bevy = {version="0.11", default-features = false, features=["bevy_winit"]}
