[package]
name = "pi_bevy_ecs_macro"
version = "0.1.3"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_bevy"
license = "MIT OR Apache-2.0"
keywords = ["pi", "bevy", "ecs", "ecs_macro"]

[dependencies]
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true